test_programs/compile_failure/regression_10389_1/src/main.nr
fn main() {
    let x = 255_u8;
    match x {
        -1 => {},
        _ => {},
    }
}
